--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -282,3 +282,12 @@ a.desc:after {
 .f-right {
     float: right;
 }
+
+.careholder-name {
+    max-width: 700px;
+    background-color: #fff;
+    margin: 100px auto;
+    overflow: hidden;
+    padding: 25px;
+    color: #4c4e56;
+}
