--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -353,3 +353,8 @@ a.desc:after {
     float: left;
     margin: 0 25px 0 -45px;
 }
+
+.recover-alert {
+    text-align: center;
+    font-size: 16px;
+}
