--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -242,6 +242,10 @@ a.desc:after {
 }
 
 @media (max-width: 767px) {
+    .btn-social.auth-link .auth-icon {
+        margin: 0 40px 0 -65px !important;
+    }
+
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
         color: #ecf0f1;
     }
@@ -333,11 +337,16 @@ a.desc:after {
     margin: 1em 0 !important;
     padding: 0;
 }
+ul.auth-clients {
+    box-shadow: 0px 2px 7px -2px rgba(0,0,0,0.75);
+    border-radius: 4px;
+}
 
 .auth-clients li {
     margin: 0;
     text-align: center;
     width: 100%;
+    border-radius: 4px;
 }
 
 .btn-social.auth-link {
@@ -350,8 +359,11 @@ a.desc:after {
 }
 
 .btn-social.auth-link .auth-icon {
-    float: left;
-    margin: 0 25px 0 -45px;
+    margin: 0 45px 0 -80px;
+}
+.btn-social.auth-link .auth-text {
+    font-size: 16px;
+    padding-top: 4px;
 }
 
 .recover-alert {
