--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -371,6 +371,22 @@ ul.auth-clients {
     font-size: 16px;
 }
 
+.tab-content {
+    padding: 15px;
+    border-left: solid 1px #ddd;
+    border-right: solid 1px #ddd;
+    border-bottom: solid 1px #ddd;
+    border-radius: 0 0 4px 4px;
+}
+
+#reportform-order_nrs {
+    min-height: 50px;
+    min-width: 100%;
+    max-width: 100%;
+    resize: vertical;
+}
+
+
 pre {
     border: none;
     padding: 5px;
