--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -370,3 +370,12 @@ ul.auth-clients {
     text-align: center;
     font-size: 16px;
 }
+
+pre {
+    border: none;
+    padding: 5px;
+    line-height: 1;
+    max-height: 300px;
+    background-color: ivory;
+    font-size: 12px;
+}
