--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -1,385 +1,3 @@
-html,
-body {
-    height: 100%;
-}
-
-.wrap {
-    min-height: 100%;
-    height: auto;
-    margin: 0 auto -60px;
-    padding: 0 0 60px;
-}
-
-.wrap > .container {
-    padding: 70px 15px 20px;
-}
-
-.footer {
-    height: 60px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
-    padding-top: 20px;
-}
-
-.jumbotron {
-    text-align: center;
-    background-color: transparent;
-}
-
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-}
-
-.not-set {
-    color: #c55;
-    font-style: italic;
-}
-
-/* add sorting icons to gridview sort links */
-a.asc:after, a.desc:after {
-    position: relative;
-    top: 1px;
-    display: inline-block;
-    font-family: 'Glyphicons Halflings';
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    padding-left: 5px;
-}
-
-a.asc:after {
-    content: "\e151";
-}
-
-a.desc:after {
-    content: "\e152";
-}
-
-.sort-numerical a.asc:after {
-    content: "\e153";
-}
-
-.sort-numerical a.desc:after {
-    content: "\e154";
-}
-
-.sort-ordinal a.asc:after {
-    content: "\e155";
-}
-
-.sort-ordinal a.desc:after {
-    content: "\e156";
-}
-
-.grid-view td {
-    white-space: nowrap;
-}
-
-.grid-view .filters input,
-.grid-view .filters select {
-    min-width: 50px;
-}
-
-.hint-block {
-    display: block;
-    margin-top: 5px;
-    color: #999;
-}
-
-.error-summary {
-    color: #a94442;
-    background: #fdf7f7;
-    border-left: 3px solid #eed3d7;
-    padding: 10px 20px;
-    margin: 0 0 15px 0;
-}
-
-/* align the logout "link" (button in form) of the navbar */
-.nav li > form > button.logout {
-    padding: 15px;
-    border: none;
-}
-
-.nav > li > form > button.logout:focus,
-.nav > li > form > button.logout:hover {
-    text-decoration: none;
-}
-
-.nav > li > form > button.logout:focus {
-    outline: none;
-}
-
-.logout {
-    background: none;
-    border: none;
-    color: #ecf0f1;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.logout:hover {
-    color: #ecf0f1;
-}
-
-.navbar-default {
-    background-color: #053165;
-    border-color: #0c4a96;
-}
-
-.navbar-default .navbar-brand {
-    color: #ecf0f1;
-}
-
-.navbar-default .navbar-brand:hover,
-.navbar-default .navbar-brand:focus {
-    color: #ecdbff;
-}
-
-.navbar-default .navbar-text {
-    color: #ecf0f1;
-}
-
-.navbar-default .navbar-nav > li > a {
-    color: #ecf0f1;
-}
-
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-    color: #ecdbff;
-}
-
-.navbar-default .navbar-nav > li > .dropdown-menu {
-    background-color: #053165;
-}
-
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
-    color: #ecf0f1;
-}
-
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
-    color: #ecdbff;
-    background-color: #0c4a96;
-}
-
-.navbar-default .navbar-nav > li > .dropdown-menu > li.divider {
-    background-color: #0c4a96;
-}
-
-.navbar-default .navbar-nav > li > .dropdown-menu > .dropdown-submenu > ul{
-    list-style: none outside;
-    clear: both;
-    padding: 0px;
-}
-
-.navbar-default .navbar-nav > li > .dropdown-menu > .dropdown-submenu > ul > li {
-    color: #ecf0f1;
-    padding: 1.5px 15px 1.5px 25px;
-}
-
-.navbar-default .navbar-nav > li > .dropdown-menu > .dropdown-submenu > ul > li:hover,
-.navbar-default .navbar-nav > li > .dropdown-menu > .dropdown-submenu > ul > li:focus{
-    color: #ecdbff;
-    background-color: #0c4a96;
-}
-
-.navbar-default .navbar-nav > li > .dropdown-menu > .dropdown-submenu > ul > li:hover > a,
-.navbar-default .navbar-nav > li > .dropdown-menu > .dropdown-submenu > ul > li:focus > a {
-    color: inherit;
-}
-
-.navbar-default .navbar-nav > li > .dropdown-menu > .dropdown-submenu > ul > li > a
-{
-    text-decoration: none;
-}
-
-.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
-.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
-.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #ecdbff;
-    background-color: #0c4a96;
-}
-
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-    color: #ecdbff;
-    background-color: #0c4a96;
-}
-
-.navbar-default .navbar-nav > .open > a,
-.navbar-default .navbar-nav > .open > a:hover,
-.navbar-default .navbar-nav > .open > a:focus {
-    color: #ecdbff;
-    background-color: #0c4a96;
-}
-
-.navbar-default .navbar-toggle {
-    border-color: #0c4a96;
-}
-
-.navbar-default .navbar-toggle:hover,
-.navbar-default .navbar-toggle:focus {
-    background-color: #0c4a96;
-}
-
-.navbar-default .navbar-toggle .icon-bar {
-    background-color: #ecf0f1;
-}
-
-.navbar-default .navbar-collapse,
-.navbar-default .navbar-form {
-    border-color: #ecf0f1;
-}
-
-.navbar-default .navbar-link {
-    color: #ecf0f1;
-}
-
-.navbar-default .navbar-link:hover {
-    color: #ecdbff;
-}
-
-@media (max-width: 767px) {
-    .btn-social.auth-link .auth-icon {
-        margin: 0 40px 0 -65px !important;
-    }
-
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-        color: #ecf0f1;
-    }
-
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-        color: #ecdbff;
-    }
-
-    .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
-    .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
-    .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-        color: #ecdbff;
-        background-color: #0c4a96;
-    }
-}
-
-.order-card {
-    color: #fff;
-}
-
-.bg-c-shipwise {
-    background: linear-gradient(45deg, #0c4a96, #0c58f4);
-}
-
-.bg-c-blue {
-    background: linear-gradient(45deg, #4099ff, #73b4ff);
-}
-
-.bg-c-green {
-    background: linear-gradient(45deg, #2ed8b6, #59e0c5);
-}
-
-.bg-c-yellow {
-    background: linear-gradient(45deg, #FFB64D, #ffcb80);
-}
-
-.bg-c-pink {
-    background: linear-gradient(45deg, #FF5370, #ff869a);
-}
-
-
-.card {
-    border-radius: 5px;
-    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
-    box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
-    border: none;
-    margin-bottom: 30px;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-}
-
-.card .card-block {
-    padding: 25px;
-}
-
-.order-card i {
-    font-size: 26px;
-}
-
-.f-left {
-    float: left;
-}
-
-.f-right {
-    float: right;
-}
-
-.careholder-name {
-    max-width: 700px;
-    background-color: #fff;
-    margin: 100px auto;
-    overflow: hidden;
-    padding: 25px;
-    color: #4c4e56;
-}
-
-.m-auto {
-    margin: auto;
-}
-
-#LoginForm .auth-clients {
-    margin-top: 15px;
-}
-
-.auth-clients {
-    display: flex;
-    justify-content: center;
-    margin: 1em 0 !important;
-    padding: 0;
-}
-ul.auth-clients {
-    box-shadow: 0px 2px 7px -2px rgba(0,0,0,0.75);
-    border-radius: 4px;
-}
-
-.auth-clients li {
-    margin: 0;
-    text-align: center;
-    width: 100%;
-    border-radius: 4px;
-}
-
-.btn-social.auth-link {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    color: #000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.btn-social.auth-link .auth-icon {
-    margin: 0 45px 0 -80px;
-}
-.btn-social.auth-link .auth-text {
-    font-size: 16px;
-    padding-top: 4px;
-}
-
-.recover-alert {
-    text-align: center;
-    font-size: 16px;
-}
-
-pre {
-    border: none;
-    padding: 5px;
-    line-height: 1;
-    max-height: 300px;
-    background-color: ivory;
-    font-size: 12px;
-}
-
-.form-actions {
-    margin: 0 0 15px 0 !important;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
